send data to server

--- a/src/container/LoginFrom.css
+++ b/src/container/LoginFrom.css
@@ -1,7 +1,8 @@
 #fromlog {
-  background-color: blueviolet;
+  background-color: black;
   text-align: center;
   display: block;
   margin: 10px;
   padding: 10px;
+  color: yellow;
 }
