--- a/src/container/LoginFrom.css
+++ b/src/container/LoginFrom.css
@@ -1,8 +1,52 @@
-#fromlog {
+body {
   background-color: black;
+}
+#fromlog {
   text-align: center;
-  display: block;
-  margin: 10px;
-  padding: 10px;
   color: yellow;
+  font-size: x-large;
+  text-align: center;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+#log {
+  color: white;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+#fromlog input[type="text"],
+#fromlog input[type="password"] {
+  border: 0;
+  background: none;
+  display: block;
+  margin: 20px auto;
+  text-align: center;
+  border: 2px solid #3498db;
+  padding: 14px 10px;
+  width: 200px;
+  outline: none;
+  color: white;
+  border-radius: 24px;
+  transition: 0.25s;
+}
+button {
+  border: 0;
+  background: none;
+  display: block;
+  margin: 20px auto;
+  text-align: center;
+  border: 2px solid #2ecc71;
+  padding: 14px 40px;
+  outline: none;
+  color: white;
+  border-radius: 24px;
+  transition: 0.25s;
+  cursor: pointer;
+}
+button:hover {
+  background: #2ecc71;
 }
