--- a/weblog/src/container/LoginFrom.css
+++ b/weblog/src/container/LoginFrom.css
@@ -63,6 +63,7 @@ button:hover {
   flex-direction: column;
   align-items: center;
   color: yellow;
+  float: left;
 }
 .abouttext {
   text-align: center;
@@ -71,4 +72,7 @@ button:hover {
   flex-direction: column;
   align-items: center;
   color: yellow;
+}
+#users {
+  border: 5px solid yellow;
 }
