--- a/weblog/src/container/chat/public/sidebar.css
+++ b/weblog/src/container/chat/public/sidebar.css
@@ -1,21 +1,11 @@
-.bm-item {
-    display: inline-block;
-    text-decoration: none;
-    margin-bottom: 10px;
-    color: #d1d1d1;
-    transition: color 0.2s;
-  }
-  
-  .bm-item:hover {
-    color: white;
-  }
-  
+
   .bm-burger-button {
-    position: fixed;
-    width: 36px;
-    height: 30px;
-    left: 36px;
-    top: 36px;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    left: 0em;
+    top: 28em;
+    opacity: 0;
   }
   
   .bm-burger-bars {
@@ -51,4 +41,7 @@
   
   .bm-overlay {
     background: rgba(0, 0, 0, 0.3);
+  }
+  *{
+    overflow-x: hidden;
   }
