--- a/weblog/src/container/chat/public/sidebar.css
+++ b/weblog/src/container/chat/public/sidebar.css
@@ -3,8 +3,11 @@
     position: absolute;
     width: 50px;
     height: 50px;
-    left: 0em;
-    top: 28em;
+    top:0;
+    bottom:0;
+    margin-top: auto;
+    margin-bottom:auto;
+    text-align:center;
     opacity: 0;
   }
   
