--- a/weblog/src/container/public/message.css
+++ b/weblog/src/container/public/message.css
@@ -1,4 +1,4 @@
-.message-block-my,
+/*.message-block-my,
 .message-block-not-my{
     max-width:fit-content;
     margin:10px;
@@ -21,3 +21,4 @@
     font-size:20px;
     align-self: flex-start;
 }
+*/
