--- a/weblog/src/container/public/chat.css
+++ b/weblog/src/container/public/chat.css
@@ -1,6 +1,4 @@
-
-.body{
-    display:flex;
+/*.body{
     background-color: #282c34;
 }
 @media only screen and (max-width:680px){
@@ -18,11 +16,6 @@
 .send-message{
     width:80%;
 }
-nav{
-    width:80%;
-}
-
-
 .prof-pic{
     height:8%;
     width:8%;
@@ -45,23 +38,6 @@ nav{
 .send-message{
     width: 80%;
 }
-nav{
-    width: 100vw;
-}
-
-
-.channel-info-bar{
-    background-color: #164e63;
-    border-bottom:4px solid #64748b;
-    display:flex;
-    width:100%;
-    height:10vh;
-}
-.channel-info-name{
-    display:flex;
-    background-color: #164e63;
-}
-
 .chat-window{
     height:85vh;
     }
@@ -109,14 +85,10 @@ nav{
     width: 100%;
     display: flex;
 }
-
-
-
 .messages{
     height: 80vh;
     overflow-y: scroll;
     display:flex;
     flex-direction: column;
     align-items: center;
-}
-
+}*/
