--- a/weblog/src/container/public/sidebtn.css
+++ b/weblog/src/container/public/sidebtn.css
@@ -1,4 +1,4 @@
-:root {
+/*:root {
     --btn-bg-color: #1e40af;
 }
 .side-btn .circle {
@@ -27,3 +27,4 @@
     margin-top: auto;
     margin-left: -0.3em;
 }
+*/
