sending messages added

--- a/weblog/src/container/public/Homepage.css
+++ b/weblog/src/container/public/Homepage.css
@@ -1,4 +1,4 @@
-/*.homepage {
+.homepage {
   text-align: center;
   position: relative;
   display: flex;
@@ -26,4 +26,4 @@ th {
 .home {
   color: yellow;
 }
-*/
+
