--- a/weblog/src/container/public/sidebar.css
+++ b/weblog/src/container/public/sidebar.css
@@ -1,4 +1,4 @@
-/*
+
   .bm-burger-button {
     position: absolute;
     width: 50px;
@@ -45,4 +45,4 @@
   
   .bm-overlay {
     background: rgba(0, 0, 0, 0.3);
-  }*/
+  }
