--- a/weblog/src/container/public/chat.css
+++ b/weblog/src/container/public/chat.css
@@ -1,4 +1,4 @@
-/*.body{
+.body{
     background-color: #282c34;
 }
 @media only screen and (max-width:680px){
@@ -91,4 +91,4 @@
     display:flex;
     flex-direction: column;
     align-items: center;
-}*/
+}
