--- a/weblog/src/container/public/message.css
+++ b/weblog/src/container/public/message.css
@@ -1,8 +1,9 @@
-/*.message-block-my,
+.message-block-my,
 .message-block-not-my{
-    max-width:fit-content;
+    max-width: fit-content;
     margin:10px;
 }
+
 .message-block-my{
     margin-bottom:20px;
     padding:20px;
@@ -21,4 +22,3 @@
     font-size:20px;
     align-self: flex-start;
 }
-*/
