Ad display users && create channel

--- a/src/container/chat/style/sidebar.css
+++ b/src/container/chat/style/sidebar.css
@@ -36,9 +36,10 @@
 }
 
 .bm-item-list {
+  flex-direction: column;
   color: white;
   display: flex;
-  flex-direction: column;
+  width: 20vw;
 }
 
 .bm-overlay {
