--- a/src/container/style/LoginFrom.css
+++ b/src/container/style/LoginFrom.css
@@ -1,52 +1,26 @@
 body {
-  background-color: #0f172a;
+  background-color: #2d2b2a;
   letter-spacing: 0.5px;
   font-family: "Red Hat Mono", monospace;
 }
-/*
-#fromlog {
-  text-align: center;
-  color: yellow;
-  font-size: x-large;
-  text-align: center;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: #27272a;
-  width:500px;
-}
-#fromlog input[type="text"],
-#fromlog input[type="password"] {
-  border: 0;
-  background: none;
-  display: block;
-  margin: 20px auto;
-  text-align: center;
-  border: 2px solid #3498db;
-  padding: 14px 10px;
-  width: 200px;
-  outline: none;
-  color: white;
-  border-radius: 24px;
-  transition: 0.25s;
-}
-*/
 #upertext {
   font-weight: bold;
+  color: greenyellow;
 }
 .input-text-above {
   float: left;
   font-weight: bold;
 }
 #fromlog {
+  justify-content: center;
   flex-direction: column;
+  align-items: center;
   text-align: center;
+  display: flex;
 }
 #int {
   color: white;
-  background-color: #111827;
+  background-color: #1c1917;
   height: max-content;
   width: 22.4rem;
   position: absolute;
@@ -55,8 +29,8 @@ body {
   left: 50%;
   border-radius: 10px;
   backdrop-filter: blur(10px);
-  border: 2px solid rgba(255, 255, 255, 0.1);
-  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+  border: 2px solid rgb(0, 136, 785);
+  box-shadow: 0 0 150px rgb(0, 136, 255);
   padding: 50px 35px;
 }
 #int input {
@@ -70,12 +44,12 @@ body {
   font-size: 20px;
   font-weight: 300;
   outline: none;
-  color: white;
+  color: #5eead4;
 }
 .loginButton {
   margin-top: 50px;
   width: 100%;
-  background-color: #ffffff;
+  background-color: #00fff77a;
   color: #080710;
   padding: 15px 0;
   font-size: 18px;
@@ -84,10 +58,15 @@ body {
   cursor: pointer;
   border: none;
 }
-.loginButton:hover {
+loginButton:hover {
   background-color: #a1a1aa;
 }
 .image-format-info {
+  color: #fde047;
   font-size: 10px;
   float: left;
+}
+
+.input_text_above {
+  color: #fde047;
 }
