--- a/weblog/src/container/public/chat.css
+++ b/weblog/src/container/public/chat.css
@@ -65,7 +65,7 @@
     letter-spacing: 1%;
 }
 .send-message .send{
-    background-color: #282c34;
+    background-color: #181b22;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -75,7 +75,14 @@
     cursor: pointer;
     font-size: 1.25rem;
 }
+.sendFile{
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
 
+    font-size: 1.25rem;
+}
 .chat-window{
     display:grid;
     width:100%;
