--- a/src/container/style/chat.css
+++ b/src/container/style/chat.css
@@ -52,7 +52,10 @@
   font-size: 1.5rem;
   overflow-x: hidden;
 }
-.send-message input {
+::placeholder{
+  padding:5px;
+}
+.send-message .message-input {
   line-height: 1.5;
   width: 99.2%;
   font-size: 1.5rem;
@@ -74,14 +77,27 @@
   cursor: pointer;
   font-size: 1.25rem;
 }
-.sendFile {
-  justify-content: left;
-  display: inline-block;
-  text-decoration: none;
+.SendFile{
+  background-color:rgb(58, 58, 58);
+  color:white;
+  border:1px solid black;
+  background-color: #181b22;
+  border: none;
+  color: white;
   padding: 15px 32px;
   text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
   font-size: 1.25rem;
+  border-right:2px solid black; 
 }
+
+
+.hidden{
+  display:none;
+}
+
 .chat-window {
   display: grid;
   width: 100%;
