--- a/src/container/style/ChannelList.css
+++ b/src/container/style/ChannelList.css
@@ -17,17 +17,37 @@
 .home {
   color: yellow;
 }
-.liusername {
-  border: 3px solid yellow;
-  background-color: #3f3f46;
-  width: 100%;
+
+/*
+  Style do tabeli
+*/
+.list {
+  font-family: "Edu QLD Beginner", cursive;
+  border: 5px solid #ffff00;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  height: 150px;
+  width: 50%;
 }
-th {
-  width: 33%;
+.listbody {
+  border-radius: 60px;
+  border: 5px solid black;
+  background-color: #fde047;
+  padding: 10px;
+  color: blue;
 }
-tr {
-  width: 33%;
+.chanelname {
+  border: 5px solid blue;
+  color: green;
 }
-td {
-  width: 33%;
+.ower {
+  border: 5px solid green;
+  color: red;
+}
+.jon {
+  border: 5px solid #f4bc04;
+  border-radius: 50px 20px;
+  width: 10vh;
 }
