--- a/src/container/style/ChannelList.css
+++ b/src/container/style/ChannelList.css
@@ -1,11 +1,3 @@
-.homepage {
-  text-align: center;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  float: left;
-}
 .abouttext {
   text-align: center;
   position: relative;
@@ -14,6 +6,44 @@
   align-items: center;
   color: yellow;
 }
-.home {
+#input {
   color: yellow;
+  background-color: #292524;
+}
+.list {
+  font-family: "Edu QLD Beginner", cursive;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  height: auto;
+  padding: 2px;
+  width: 100%;
+}
+.listbody {
+  background-color: #171717;
+  border: 5px solid #1c1917;
+  padding: 10px;
+  color: blue;
+}
+.chanelname {
+  color: green;
+}
+.ower {
+  color: red;
+}
+.jon {
+  border-radius: 50px 10px;
+  background-color: #171717;
+  color: yellow;
+  width: 10vh;
+}
+#one {
+  width: 100px;
+}
+#two {
+  width: 200px;
+}
+#tree {
+  width: 100px;
 }
