Reapir css for chat/login

--- a/src/container/style/About.css
+++ b/src/container/style/About.css
@@ -1,26 +1,26 @@
-body{
-    font-family: 'Roboto';
+body {
+  margin: 0%;
+  font-family: "Roboto";
 }
-.aboutFooter{
-    height: 55px;
-    background-color: #9ca3af;
-    display: flex;
-    justify-content: center;
-    color: white;
-    font-weight: 100;
+.aboutFooter {
+  height: 55px;
+  background-color: #9ca3af;
+  display: flex;
+  justify-content: center;
+  color: white;
+  font-weight: 100;
 }
-.navSpacer{
-    flex: 1;
+.navSpacer {
+  flex: 1;
 }
-main{
-    background-color: white;
-    
+main {
+  background-color: white;
 }
-.aboutText{
-    margin: 0%;
-    color: black;
-    text-align: center;
+.aboutText {
+  margin: 0%;
+  color: black;
+  text-align: center;
 }
-.container{
-    text-align: center;
+.container {
+  text-align: center;
 }
