--- a/src/container/style/Author.css
+++ b/src/container/style/Author.css
@@ -1,28 +1,27 @@
 .author {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    padding: 2px 16px;
-    height: 500px;
-    max-width: 20vw;
-    min-width: 250px;
-    margin: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  justify-content: center;
+  flex-direction: column;
+  display: relative;
+  padding: 2px 16px;
+  transition: 0.3s;
+  min-width: 250px;
+  width: 20vh;
+  height: 500px;
+  margin: 30px;
 }
 .author:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    background-color: #fafafa;
-
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  background-color: #fafafa;
 }
-.authorContainer{
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-
+.authorContainer {
+  justify-content: center;
+  text-align: center;
+  flex-wrap: wrap;
+  display: flex;
+  width: 200vh;
 }
-.authorPhoto{
-    max-width:100%;
-    max-height:80%;    
+.authorPhoto {
+  max-width: 100%;
+  max-height: 80%;
 }
