--- a/src/container/style/Login.css
+++ b/src/container/style/Login.css
@@ -1,9 +1,3 @@
-body {
-  background-color: #2d2b2a;
-  letter-spacing: 0.5px;
-  font-family: 'Roboto';
-
-}
 #upertext {
   font-weight: bold;
   color: greenyellow;
@@ -34,7 +28,7 @@ body {
   box-shadow: 0 0 150px rgb(0, 136, 255);
   padding: 50px 35px;
 }
-#int input {
+.int-input {
   display: block;
   height: 50px;
   width: 100%;
