--- a/src/container/style/chat.css
+++ b/src/container/style/chat.css
@@ -1,6 +1,6 @@
-.body {
-  background-color: #282c34;
-    font-family: 'Roboto';
+body {
+  font-family: "Roboto";
+  background-color: #181b22;
 }
 @media only screen and (max-width: 680px) {
   .chat-window {
@@ -52,8 +52,8 @@
   font-size: 1.5rem;
   overflow-x: hidden;
 }
-::placeholder{
-  padding:5px;
+::placeholder {
+  padding: 5px;
 }
 .send-message .message-input {
   line-height: 1.5;
@@ -77,10 +77,10 @@
   cursor: pointer;
   font-size: 1.25rem;
 }
-.SendFile{
-  background-color:rgb(58, 58, 58);
-  color:white;
-  border:1px solid black;
+.SendFile {
+  background-color: rgb(58, 58, 58);
+  color: white;
+  border: 1px solid black;
   background-color: #181b22;
   border: none;
   color: white;
@@ -90,12 +90,11 @@
   display: inline-block;
   cursor: pointer;
   font-size: 1.25rem;
-  border-right:2px solid black; 
+  border-right: 2px solid black;
 }
 
-
-.hidden{
-  display:none;
+.hidden {
+  display: none;
 }
 
 .chat-window {
