Chanege About.js/About.css make Responsive web

--- a/src/container/style/About.css
+++ b/src/container/style/About.css
@@ -1,26 +1,42 @@
-body {
-  margin: 0%;
-  font-family: "Roboto";
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
-.aboutFooter {
-  height: 55px;
-  background-color: #9ca3af;
+body {
+  background-color: #18181b;
+}
+.container-about {
   display: flex;
   justify-content: center;
-  color: white;
-  font-weight: 100;
 }
-.navSpacer {
-  flex: 1;
-}
-main {
+.card {
   background-color: white;
+  width: 270px;
+  height: 400px;
+  margin: 10px;
 }
-.aboutText {
-  margin: 0%;
-  color: black;
-  text-align: center;
+.card-image {
+  height: 300px;
+  margin-bottom: 15px;
+  background-size: cover;
 }
-.container {
-  text-align: center;
+.card-1 {
+  background-image: url(https://www.wykop.pl/cdn/c3201142/comment_D7XfAHC4AUqQWlMB6xHTtmo1947Zhpvu,w400.jpg);
+}
+.card-2 {
+  background-image: url(https://st4.depositphotos.com/2249091/21946/i/1600/depositphotos_219464348-stock-photo-vertical-view-mother-holding-cute.jpg);
+}
+.card-3 {
+  background-image: url(https://thumbs.dreamstime.com/b/para-seniora-razem-pionowe-805221.jpg);
+}
+.card-4 {
+  background-image: url(https://thumbs.dreamstime.com/b/szcz%C4%99%C5%9Bliwa-rodzina-pionowe-4016034.jpg);
+}
+
+.footer-about {
+  justify-content: space-between;
+  background-color: #2563eb;
+  clear: both;
+  height: 29px;
 }
