--- a/src/container/style/Author.css
+++ b/src/container/style/Author.css
@@ -1,4 +1,4 @@
-.author {
+/* .author {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   justify-content: center;
   flex-direction: column;
@@ -24,4 +24,4 @@
 .authorPhoto {
   max-width: 100%;
   max-height: 80%;
-}
+} */
