--- a/src/container/style/ChannelList.css
+++ b/src/container/style/ChannelList.css
@@ -1,23 +1,6 @@
-.abouttext {
-  background: rgb(241, 173, 0);
-  flex-direction: column;
-  word-break: break-all;
-  align-items: center;
-  text-align: center;
-  position: relative;
-  color: yellow;
-  display: flex;
-  background: radial-gradient(
-    circle,
-    rgba(241, 173, 0, 1) 3%,
-    rgba(245, 29, 6, 0.9139005944174545) 100%
-  );
-}
-.channels-inputs {
+.body-channellist {
   background-color: #292524;
-  color: yellow;
-}
-.list {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-family: "Edu QLD Beginner", cursive;
   justify-content: center;
   align-items: center;
@@ -26,12 +9,30 @@
   height: auto;
   padding: 2px;
 }
+.list-chennel {
+  flex-direction: column;
+  word-break: break-all;
+  align-items: center;
+  text-align: center;
+  position: relative;
+  color: yellow;
+  display: flex;
+}
+.chanels {
+  background-color: #292524;
+  color: yellow;
+}
+.channels-inputs {
+  background-color: #18181b;
+  color: #a3e635;
+  font-size: medium;
+}
 .listbody {
   background-color: #171717;
   border: 5px solid #1c1917;
   text-align: center;
   padding: 10px;
-  color: blue;
+  color: rgb(0, 238, 255);
   height: 150px;
   width: 500px;
 }
@@ -51,8 +52,8 @@
   color: red;
 }
 .jon {
-  background-color: #171717;
+  background-color: #d4d4d8;
   border-radius: 50px 10px;
-  color: yellow;
+  color: #27272a;
   width: 10vh;
 }
